# MCP

./: README.md
barry-client/: .env.example  .gitignore  CODEBASE_WALKTHROUGH.md  OLLAMA_SETUP.md  OLLAMA_WALKTHROUGH.md  README.md  pyproject.toml
barry-client/src/barry_client/: __init__.py  client.py  gemini_agent.py  ollama_agent.py
barry-mcp-server/: .gitignore  CLAUDE_CONFIG.md  CODEBASE_EXPLANATION.md  README.md  SETUP_GUIDE.md  pyproject.toml
barry-mcp-server/src/barry_server/: __init__.py  __main__.py  server.py
