[project]
name = "barry-server"
version = "0.1.0"
description = "A simple MCP server for querying Barry chocolate dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pandas>=2.0.0",
]

[project.scripts]
barry-server = "barry_server.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
